@@ -536,7 +536,7 @@ static float rough_cost_estimate(const assignment &a, unsigned short int i, cons
 }
 
 // Code for another ic is generated when generating this one. Mark the other as generated.
-static void extra_ic_generated(const iCode *ic)
+static void extra_ic_generated(iCode *ic)
 {
   if(ic->op == '>' || ic->op == '<' || ic->op == LE_OP || ic->op == GE_OP || ic->op == EQ_OP || ic->op == NE_OP || ic->op == '^' || ic->op == '|' || ic->op == BITWISEAND)
     {
