@@ -118,6 +118,7 @@ static builtins _z80_builtins[] = {
   {"__builtin_memcpy", "vg*", 3, {"vg*", "vg*", "ui"}},
   {"__builtin_memset", "vg*", 3, {"vg*", "i", "ui"}},
   {"__builtin_strcpy", "cg*", 2, {"cg*", "cg*"}},
+  {"__builtin_strchr", "cg*", 2, {"cg*", "i"}},
   {NULL, NULL, 0, {NULL}}
 };
 
