@@ -717,12 +717,12 @@ int z80instructionSize(lineNode *pl)
 
   /* move to the first operand:
    * leading spaces are already removed, skip the mnenonic */
-  for (op1start = pl->line; !isspace (*op1start); ++op1start)
+  for (op1start = pl->line; *op1start && !isspace (*op1start); ++op1start)
     ;
   /* skip the spaces between mnemonic and the operand */
   while (isspace (*op1start))
     ++op1start;
-  if ('\0' == *op1start)
+  if (!(*op1start))
     op1start = NULL;
 
   if (op1start)
