@@ -38,8 +38,7 @@ extern Z80_OPTS z80_opts;
 
 #define IY_RESERVED (z80_opts.reserveIY)
 
-#define OPTRALLOC_EXACT_COST 1
-#define OPTRALLOC_REMAT (OPTRALLOC_EXACT_COST && !IS_GB)
+#define OPTRALLOC_REMAT (!IS_GB)
 #define OPTRALLOC_HL (!IS_GB)
 #define OPTRALLOC_IY !(IY_RESERVED || IS_GB)
 
